--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+*{
+
+  margin:0px;
+  padding:0px;
+  box-sizing: border-box;
+  font-family:'Roboto', sans-serif;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App
+{
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#rout-section-123
+{
+  background-color:#eef1fa;
+  height: 87%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+#footer-123
+{
+  background-color:white;
+  height:5%;
+  display:flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content:space-between;
+  font-size: 13px;
+  letter-spacing:1px;
 }
-
-.App-link {
-  color: #61dafb;
+#footer-123 p:nth-of-type(1)
+{
+  margin-left: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#footer-123 p:nth-of-type(2)
+{
+  margin-right: 50px;
 }
