--- a/src/pages/analytics/Analytics-st.module.css
+++ b/src/pages/analytics/Analytics-st.module.css
@@ -1,4 +1,11 @@
-.main
-{
-    background-color: blue;
+.main {
+    background-color: rgba(0, 0, 255, 0.485);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main img {
+    height: 120px;
 }
