--- a/src/pages/overview/overview-style.module.css
+++ b/src/pages/overview/overview-style.module.css
@@ -1,68 +1,80 @@
-:root{
-    --text:#34346e;
+:root {
+    --text: #34346e;
 }
-.main
-{
-     
+
+.main {
+
     height: 100%;
 }
-.first
-{
-   position:absolute;
-   height:620.5px;
-   width: 100%;
-   /* background-color: rgba(39, 37, 37, 0.655);
-   z-index: 1; */
-   
-}
-.second
-{  
-   position:relative;
-   height: 85%;
-   display: grid;
-   grid-template-columns: 1fr;
-   grid-template-rows: 0.5fr 2fr 3fr 1fr;
+
+.first {
+    position: absolute;
+    height: 620.5px;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: end;
 
 }
+
+.first svg {
+    display: inline-block;
+    vertical-align: middle;
+    height: 610px;
+    width: 97%;
+
+
+
+}
+
+.first svg path {
+    fill: royalblue;
+
+}
+
+.second {
+    position: relative;
+    height: 85%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 2fr 3fr 1fr;
+
+}
+
 /* .second p
 {
     background-color: red;
 } */
 
-.second div
-{
-    
-    
-}
-.second div:nth-of-type(1)
-{
-    
+.second div {}
+
+.second div:nth-of-type(1) {
+
     display: flex;
-    align-items:center;
+    align-items: center;
     padding-left: 50px;
-    font-weight:500;
+    font-weight: 500;
     letter-spacing: 0.2px;
 }
 
-.second div:nth-of-type(2)
-{
-    
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: baseline;
-     padding-left: 50px;
+.second div:nth-of-type(2) {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    padding-left: 50px;
 }
 
-.second div:nth-of-type(2) p
-{
+.second div:nth-of-type(2) p {
     display: flex;
-    align-items:end;
+    align-items: end;
     justify-content: center;
     color: var(--text);
 }
-.second div:nth-of-type(2) p h6
-{
+
+.second div:nth-of-type(2) p h6 {
     font-size: 10px;
     margin-left: 10px;
     margin-bottom: 2px;
@@ -71,145 +83,140 @@
     align-items: center;
     justify-content: center;
 }
-.second div:nth-of-type(2) h1
-{
+
+.second div:nth-of-type(2) h1 {
     color: var(--text);
     margin-top: 10px;
-    font-size:40px;
+    font-size: 40px;
 }
 
 
-.second div:nth-of-type(3)
-{
-   
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.second div:nth-of-type(3) {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-.second div:nth-of-type(3) nav
-{
-   
+
+.second div:nth-of-type(3) nav {
+
     height: 60px;
-    margin-top:5px;
-   display: flex;
-   align-items: center;
-   padding-left: 50px;
-}
-.second div:nth-of-type(3) nav:nth-of-type(1)  div:nth-of-type(1)
-{
-    background-color:#8675ff;
-    padding: 0px;
-    height: 40px;
-    width: 40px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:white;
-}
-.second div:nth-of-type(3) nav:nth-of-type(1)  div:nth-of-type(2)
-{
-    
-    padding:0px;
-    margin-left:20px;
-   
-    
-}
-.dat1 p:nth-of-type(1)
-{
- 
-  color: black !important;
-}
-.dat1 p:nth-of-type(2)
-{
- 
-  margin-top: 5px;
-  color: black !important;
-  font-weight: 700;
-  letter-spacing: 1px;
-}
-
-.second div:nth-of-type(3) nav:nth-of-type(2)  div:nth-of-type(1)
-{
-    background-color:#63c9ff;
-    padding: 0px;
-    height: 40px;
-    width: 40px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:white;
-}
-
-
-
-.second div:nth-of-type(3) nav:nth-of-type(2)  div:nth-of-type(2)
-{
-    
-    padding:0px;
-    margin-left:20px;
-   
-    
-}
-
-
-.second div:nth-of-type(3) nav:nth-of-type(3)  div:nth-of-type(1)
-{
-    background-color:#33231e;
-    padding: 0px;
-    height: 40px;
-    width: 40px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:white;
-}
-
-
-
-.second div:nth-of-type(3) nav:nth-of-type(3)  div:nth-of-type(2)
-{
-    
-    padding:0px;
-    margin-left:20px;
-   
-    
-}
-
-
-
-
-.second div:nth-of-type(4)
-{
-    
+    margin-top: 5px;
     display: flex;
     align-items: center;
     padding-left: 50px;
 }
-.pro1
-{  
-    
+
+.second div:nth-of-type(3) nav:nth-of-type(1) div:nth-of-type(1) {
+    background-color: #8675ff;
+    padding: 0px;
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.second div:nth-of-type(3) nav:nth-of-type(1) div:nth-of-type(2) {
+
+    padding: 0px;
+    margin-left: 20px;
+
+
+}
+
+.dat1 p:nth-of-type(1) {
+
+    color: black !important;
+}
+
+.dat1 p:nth-of-type(2) {
+
+    margin-top: 5px;
+    color: black !important;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.second div:nth-of-type(3) nav:nth-of-type(2) div:nth-of-type(1) {
+    background-color: #63c9ff;
+    padding: 0px;
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+
+
+.second div:nth-of-type(3) nav:nth-of-type(2) div:nth-of-type(2) {
+
+    padding: 0px;
+    margin-left: 20px;
+
+
+}
+
+
+.second div:nth-of-type(3) nav:nth-of-type(3) div:nth-of-type(1) {
+    background-color: #33231e;
+    padding: 0px;
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+
+
+.second div:nth-of-type(3) nav:nth-of-type(3) div:nth-of-type(2) {
+
+    padding: 0px;
+    margin-left: 20px;
+
+
+}
+
+
+
+
+.second div:nth-of-type(4) {
+
+    display: flex;
+    align-items: center;
+    padding-left: 50px;
+}
+
+.pro1 {
+
     height: 100%;
     width: 180px;
     display: flex;
-    padding:0px;
+    padding: 0px;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 }
-.des
-{   
-    
+
+.des {
+
     margin: 0px;
     padding: 0px;
     height: 60px;
     width: 60px;
 }
-.textw
-{    padding:0px;
-     margin:0px;
-     
+
+.textw {
+    padding: 0px;
+    margin: 0px;
+
     height: 70px;
     width: 90px;
     display: flex;
@@ -218,81 +225,76 @@
     align-items: baseline;
     color: var(--text);
 }
-.textw p:nth-of-type(2)
-{ margin-top: 5px;
-  font-size: 11px;
-  
+
+.textw p:nth-of-type(2) {
+    margin-top: 5px;
+    font-size: 11px;
+
 }
 
-.pro2
-{
-    
+.pro2 {
+
     height: 100%;
     width: 180px;
     display: flex;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 
 }
 
 
 
-.third
-{
-  
-    position:relative;
+.third {
+
+    position: relative;
     height: 15%;
     display: flex;
     align-items: center;
     justify-content: center;
-   
-    
+
+
 }
 
-.chartdiv
-{
+.chartdiv {
     background-color: rgb(255, 255, 255);
     height: 80px;
     width: 95%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border-radius: 5px;
+    border-radius: 9px;
     box-shadow: 0px 5px 10px -1px rgba(128, 128, 128, 0.522);
 }
-.chartdiv nav:nth-of-type(1)
-{
-  
-  height: 60px;
-  width: 100px;
-  color: var(--text);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.chartdiv nav:nth-of-type(1) p:first-child
-{
-  
-  font-size: 11px;
-}
-.chartdiv nav:nth-of-type(1) p:last-child
-{
-  
-  font-size: 19px;
-  font-weight: 700;
-  color: black;
-  margin-top: 5px;
+
+.chartdiv nav:nth-of-type(1) {
+
+    height: 60px;
+    width: 100px;
+    color: var(--text);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.chartdiv nav:nth-of-type(2)
-{
-  
-  height: 60px;
-  width: 1300px;
-  display: flex;
-  align-items: end;
-  justify-content: center;
+.chartdiv nav:nth-of-type(1) p:first-child {
+
+    font-size: 11px;
 }
 
+.chartdiv nav:nth-of-type(1) p:last-child {
 
+    font-size: 19px;
+    font-weight: 700;
+    color: black;
+    margin-top: 5px;
+}
+
+.chartdiv nav:nth-of-type(2) {
+
+    height: 60px;
+    width: 1300px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
