--- a/src/pages/statics/Statistics-style.module.css
+++ b/src/pages/statics/Statistics-style.module.css
@@ -1,4 +1,18 @@
+:root{
+    --bg:#eef1fa;
+}
 .main
 {
-    background-color: red;
+    background-color:rgba(255, 0, 0, 0.314);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+    
+}
+.main img 
+{
+    height:120px;
+    
 }
